[package]
name = "ascii_art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
clap = { version = "3.0.10", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }
reqwest = "0.11.9"
arboard = "2.0.1"
